started feature to combine night and day

--- a/NeuralNetTrain/ee_import.ipynb
+++ b/NeuralNetTrain/ee_import.ipynb
@@ -31,7 +31,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "KnRwnXgRkXTH",
-        "outputId": "a6567912-f510-44a1-954e-0bf38266b479",
+        "outputId": "fa91c53b-de69-4029-ef26-561853f8af2c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 125
@@ -42,7 +42,7 @@
         "from google.colab import drive\n",
         "drive.mount('/gdrive')"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,7 +62,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "1Lfk-ya7Ux0k",
-        "outputId": "6ecebb12-4a3f-4944-8860-c015b9c0f41e",
+        "outputId": "d2609323-39a2-4e78-d2a0-602b2ec304f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -72,7 +72,7 @@
         "# Install package to handle .tiff data\n",
         "!pip install pyrsgis"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,10 +91,10 @@
       "metadata": {
         "id": "eA5AhCi0KFdG",
         "colab_type": "code",
-        "outputId": "686ad095-1b91-4c58-d118-5e659a73796d",
+        "outputId": "9142d7ed-9013-4ba6-be7d-8885ccd64310",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 141
         }
       },
       "source": [
@@ -104,15 +104,17 @@
         "#%cd /content/master_thesis_code\n",
         "#!git pull"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'master_thesis_code'...\n",
-            "remote: Enumerating objects: 322, done.\u001b[K\n",
-            "remote: Total 322 (delta 0), reused 0 (delta 0), pack-reused 322\u001b[K\n",
-            "Receiving objects: 100% (322/322), 1.01 MiB | 15.19 MiB/s, done.\n",
+            "remote: Enumerating objects: 4, done.\u001b[K\n",
+            "remote: Counting objects: 100% (4/4), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
+            "remote: Total 326 (delta 0), reused 0 (delta 0), pack-reused 322\u001b[K\n",
+            "Receiving objects: 100% (326/326), 1.12 MiB | 4.23 MiB/s, done.\n",
             "Resolving deltas: 100% (165/165), done.\n"
           ],
           "name": "stdout"
@@ -138,10 +140,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "CwZd9v4Ukxt6",
-        "outputId": "b578424e-e6e5-4afe-d5ce-af01c474d655",
+        "outputId": "220f9ea0-08e3-4ca2-c27d-5ceda0fd865b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 81
         }
       },
       "source": [
@@ -161,8 +163,26 @@
         "import scipy.io\n",
         "import sklearn.model_selection"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<p style=\"color: red;\">\n",
+              "The default version of TensorFlow in Colab will soon switch to TensorFlow 2.x.<br>\n",
+              "We recommend you <a href=\"https://www.tensorflow.org/guide/migrate\" target=\"_blank\">upgrade</a> now \n",
+              "or ensure your notebook will continue to use TensorFlow 1.x via the <code>%tensorflow_version 1.x</code> magic:\n",
+              "<a href=\"https://colab.research.google.com/notebooks/tensorflow_version.ipynb\" target=\"_blank\">more info</a>.</p>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
         {
           "output_type": "stream",
           "text": [
@@ -341,7 +361,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "1NURzseNL_yH",
-        "outputId": "97d48a9f-bfbd-4f8f-e117-792b5dada540",
+        "outputId": "d3f1542d-3b21-47f5-aab8-9a26d828840c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
@@ -500,7 +520,7 @@
       },
       "source": [
         "# List of all files in directory of images\n",
-        "mypath = \"/gdrive/My Drive/nuts_night/\"\n",
+        "mypath = \"/gdrive/My Drive/nuts_geotiff/\"\n",
         "onlyfiles = [f for f in listdir(mypath) if isfile(join(mypath, f))]"
       ],
       "execution_count": 0,
@@ -511,10 +531,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "LHq0y4SCsQFp",
-        "outputId": "9192be91-7c72-4c4e-86aa-397999284a82",
+        "outputId": "c364c76d-174d-4b08-8ac3-3dccfc9d28e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 186
         }
       },
       "source": [
@@ -522,83 +542,18 @@
         "res = 64\n",
         "x,y,label = sat_images.create_data(onlyfiles,mypath,y_dat,prediction='nuts_value',replace_nan='mean',resolution=res,night=False)"
       ],
-      "execution_count": 29,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Image processed:  0  of  692\n",
-            "Image processed:  10  of  692\n",
-            "Image processed:  20  of  692\n",
-            "Image processed:  30  of  692\n",
-            "Image processed:  40  of  692\n",
-            "Image processed:  50  of  692\n",
-            "Image processed:  60  of  692\n",
-            "Image processed:  70  of  692\n",
-            "Image processed:  80  of  692\n",
-            "Image processed:  90  of  692\n",
-            "Image processed:  100  of  692\n",
-            "Image processed:  110  of  692\n",
-            "Image processed:  120  of  692\n",
-            "Image processed:  130  of  692\n",
-            "Image processed:  140  of  692\n",
-            "Image processed:  150  of  692\n",
-            "Image processed:  160  of  692\n",
-            "Image processed:  170  of  692\n",
-            "Image processed:  180  of  692\n",
-            "Image processed:  190  of  692\n",
-            "Image processed:  200  of  692\n",
-            "Image processed:  210  of  692\n",
-            "Image processed:  220  of  692\n",
-            "Image processed:  230  of  692\n",
-            "Image processed:  240  of  692\n",
-            "Image processed:  250  of  692\n",
-            "Image processed:  260  of  692\n",
-            "Image processed:  270  of  692\n",
-            "Image processed:  280  of  692\n",
-            "Image processed:  290  of  692\n",
-            "Image processed:  300  of  692\n",
-            "Image processed:  310  of  692\n",
-            "Image processed:  320  of  692\n",
-            "Image processed:  330  of  692\n",
-            "Image processed:  340  of  692\n",
-            "Image processed:  350  of  692\n",
-            "Image processed:  360  of  692\n",
-            "Image processed:  370  of  692\n",
-            "Image processed:  380  of  692\n",
-            "Image processed:  390  of  692\n",
-            "Image processed:  400  of  692\n",
-            "Image processed:  410  of  692\n",
-            "Image processed:  420  of  692\n",
-            "Image processed:  430  of  692\n",
-            "Image processed:  440  of  692\n",
-            "Image processed:  450  of  692\n",
-            "Image processed:  460  of  692\n",
-            "Image processed:  470  of  692\n",
-            "Image processed:  480  of  692\n",
-            "Image processed:  490  of  692\n",
-            "Image processed:  500  of  692\n",
-            "Image processed:  510  of  692\n",
-            "Image processed:  520  of  692\n",
-            "Image processed:  530  of  692\n",
-            "Image processed:  540  of  692\n",
-            "Image processed:  550  of  692\n",
-            "Image processed:  560  of  692\n",
-            "Image processed:  570  of  692\n",
-            "Image processed:  580  of  692\n",
-            "Image processed:  590  of  692\n",
-            "Image processed:  600  of  692\n",
-            "Image processed:  610  of  692\n",
-            "Image processed:  620  of  692\n",
-            "Image processed:  630  of  692\n",
-            "Image processed:  640  of  692\n",
-            "Image processed:  650  of  692\n",
-            "Image processed:  660  of  692\n",
-            "Image processed:  670  of  692\n",
-            "Image processed:  680  of  692\n",
-            "Image processed:  690  of  692\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-dc2573b2516a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m64\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msat_images\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monlyfiles\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmypath\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_dat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mprediction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'nuts_value'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mreplace_nan\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'mean'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mresolution\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'sat_images' is not defined"
+          ]
         }
       ]
     },
@@ -645,8 +600,8 @@
       },
       "source": [
         "# Save ndarray to reproduce in drive for DAY images\n",
-        "scipy.io.savemat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_512_1.mat\", mdict={'x': x[:600]}, oned_as='row')\n",
-        "scipy.io.savemat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_512_2.mat\", mdict={'x': x[600:]}, oned_as='row')"
+        "scipy.io.savemat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_64.mat\", mdict={'x': x}, oned_as='row')\n",
+        "#scipy.io.savemat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_512_2.mat\", mdict={'x': x[600:]}, oned_as='row')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -883,7 +838,7 @@
         "\tfor layer in model.layers[:156]:\n",
         "  \tlayer.trainable = False"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -925,11 +880,11 @@
       "metadata": {
         "id": "8Y3Xdhdryg5R",
         "colab_type": "code",
+        "outputId": "f09a0667-bb28-43c4-81e5-97b41b5b4ef4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
-        },
-        "outputId": "f09a0667-bb28-43c4-81e5-97b41b5b4ef4"
+        }
       },
       "source": [
         "from numpy import load\n",
@@ -956,7 +911,7 @@
         "from os import listdir\n",
         "from os.path import isfile, join"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1072,6 +1027,30 @@
         "    x_test = np.moveaxis(x_test,0,-1)\n",
         "\n",
         "  return x_train, x_val, x_test, y_train, y_val, y_test, label_train, label_val, label_test\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "79YpHXEzmo3W",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Feature to combine night and day images into one 4-channel image\n",
+        "def combine_img():\n",
+        "  x_night = scipy.io.loadmat(\"/gdrive/My Drive/ThesisData/Data/data_night_mean_64.mat\")['x']\n",
+        "  x_day = scipy.io.loadmat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_64.mat\")['x']\n",
+        "  y_dat = pd.read_csv(\"/gdrive/My Drive/ThesisData/Data/enhanced_gdp_data.csv\")\n",
+        "\n",
+        "  mypath = \"/gdrive/My Drive/nuts_geotiff/\"\n",
+        "  onlyfiles = [f for f in listdir(mypath) if isfile(join(mypath, f))]\n",
+        "\n",
+        "  y, label = sat_images.create_y_label(onlyfiles,mypath,y_dat,prediction='nuts_value')\n",
+        "\n",
+        "  "
       ],
       "execution_count": 0,
       "outputs": []
