--- a/NeuralNetTrain/ee_import.ipynb
+++ b/NeuralNetTrain/ee_import.ipynb
@@ -31,7 +31,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "KnRwnXgRkXTH",
-        "outputId": "fa91c53b-de69-4029-ef26-561853f8af2c",
+        "outputId": "23b16015-faa1-479b-e77b-decfd4758161",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 125
@@ -42,7 +42,7 @@
         "from google.colab import drive\n",
         "drive.mount('/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,7 +62,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "1Lfk-ya7Ux0k",
-        "outputId": "d2609323-39a2-4e78-d2a0-602b2ec304f1",
+        "outputId": "13bbfc59-f1a5-4b30-da0a-82cfec2ec17e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -72,7 +72,7 @@
         "# Install package to handle .tiff data\n",
         "!pip install pyrsgis"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "eA5AhCi0KFdG",
         "colab_type": "code",
-        "outputId": "9142d7ed-9013-4ba6-be7d-8885ccd64310",
+        "outputId": "bfabbb5c-fc46-4eb5-d408-7d8514a9e5f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
@@ -104,18 +104,18 @@
         "#%cd /content/master_thesis_code\n",
         "#!git pull"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'master_thesis_code'...\n",
-            "remote: Enumerating objects: 4, done.\u001b[K\n",
-            "remote: Counting objects: 100% (4/4), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
-            "remote: Total 326 (delta 0), reused 0 (delta 0), pack-reused 322\u001b[K\n",
-            "Receiving objects: 100% (326/326), 1.12 MiB | 4.23 MiB/s, done.\n",
-            "Resolving deltas: 100% (165/165), done.\n"
+            "remote: Enumerating objects: 8, done.\u001b[K\n",
+            "remote: Counting objects: 100% (8/8), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (8/8), done.\u001b[K\n",
+            "remote: Total 330 (delta 2), reused 0 (delta 0), pack-reused 322\u001b[K\n",
+            "Receiving objects: 100% (330/330), 1.12 MiB | 4.12 MiB/s, done.\n",
+            "Resolving deltas: 100% (167/167), done.\n"
           ],
           "name": "stdout"
         }
@@ -140,7 +140,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "CwZd9v4Ukxt6",
-        "outputId": "220f9ea0-08e3-4ca2-c27d-5ceda0fd865b",
+        "outputId": "c0e02ac5-be8a-4238-a7b5-6c7a96c8c9a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
@@ -163,7 +163,7 @@
         "import scipy.io\n",
         "import sklearn.model_selection"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -361,7 +361,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "1NURzseNL_yH",
-        "outputId": "d3f1542d-3b21-47f5-aab8-9a26d828840c",
+        "outputId": "a41cd788-11d1-48b3-aa71-a2a3392ff503",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
@@ -372,7 +372,7 @@
         "y_dat = pd.read_csv(\"/gdrive/My Drive/ThesisData/Data/enhanced_gdp_data.csv\")\n",
         "y_dat.head()"
       ],
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +480,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
     },
@@ -489,7 +489,7 @@
       "metadata": {
         "id": "HYE5RQr87GXH",
         "colab_type": "code",
-        "outputId": "a4bef046-d6ab-4782-94ab-b7383829bb50",
+        "outputId": "64a4ddae-495f-4a2e-e98d-6db163929bc0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -500,7 +500,7 @@
         "mae_diff = np.mean(abs(y_dat['diff_value']-y_dat['diff_value'].mean()))\n",
         "print(mae_diff)"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,29 +531,60 @@
       "metadata": {
         "colab_type": "code",
         "id": "LHq0y4SCsQFp",
-        "outputId": "c364c76d-174d-4b08-8ac3-3dccfc9d28e0",
+        "outputId": "4fea63c8-c298-4b4a-df4b-baa46bca4eb2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 186
+          "height": 638
         }
       },
       "source": [
         "# PreProcess images with certain resolution\n",
         "res = 64\n",
-        "x,y,label = sat_images.create_data(onlyfiles,mypath,y_dat,prediction='nuts_value',replace_nan='mean',resolution=res,night=False)"
+        "x,y,label = sat_images.create_data(onlyfiles,mypath,y_dat,prediction='nuts_value',replace_nan='mean',resolution=res,night=False)\n",
+        "scipy.io.savemat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_64.mat\", mdict={'x': x}, oned_as='row')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-dc2573b2516a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m64\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msat_images\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monlyfiles\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmypath\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_dat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mprediction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'nuts_value'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mreplace_nan\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'mean'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mresolution\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'sat_images' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Image processed:  0  of  1253\n",
+            "Image processed:  10  of  1253\n",
+            "Image processed:  20  of  1253\n",
+            "Image processed:  30  of  1253\n",
+            "Image processed:  40  of  1253\n",
+            "Image processed:  50  of  1253\n",
+            "Image processed:  60  of  1253\n",
+            "Image processed:  70  of  1253\n",
+            "Image processed:  80  of  1253\n",
+            "Image processed:  90  of  1253\n",
+            "Image processed:  100  of  1253\n",
+            "Image processed:  110  of  1253\n",
+            "Image processed:  120  of  1253\n",
+            "Image processed:  130  of  1253\n",
+            "Image processed:  140  of  1253\n",
+            "Image processed:  150  of  1253\n",
+            "Image processed:  160  of  1253\n",
+            "Image processed:  170  of  1253\n",
+            "Image processed:  180  of  1253\n",
+            "Image processed:  190  of  1253\n",
+            "Image processed:  200  of  1253\n",
+            "Image processed:  210  of  1253\n",
+            "Image processed:  220  of  1253\n",
+            "Image processed:  230  of  1253\n",
+            "Image processed:  240  of  1253\n",
+            "Image processed:  250  of  1253\n",
+            "Image processed:  260  of  1253\n",
+            "Image processed:  270  of  1253\n",
+            "Image processed:  280  of  1253\n",
+            "Image processed:  290  of  1253\n",
+            "Image processed:  300  of  1253\n",
+            "Image processed:  310  of  1253\n",
+            "Image processed:  320  of  1253\n",
+            "Image processed:  330  of  1253\n",
+            "Image processed:  340  of  1253\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
