updated day and night merge

--- a/NeuralNetTrain/ee_import.ipynb
+++ b/NeuralNetTrain/ee_import.ipynb
@@ -31,7 +31,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "KnRwnXgRkXTH",
-        "outputId": "23b16015-faa1-479b-e77b-decfd4758161",
+        "outputId": "f043dd66-5a60-489b-f206-82773bae33aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 125
@@ -42,7 +42,7 @@
         "from google.colab import drive\n",
         "drive.mount('/gdrive')"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,7 +62,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "1Lfk-ya7Ux0k",
-        "outputId": "13bbfc59-f1a5-4b30-da0a-82cfec2ec17e",
+        "outputId": "d960e5ea-2d47-4ed1-8fbd-5dfc2de04add",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -72,7 +72,7 @@
         "# Install package to handle .tiff data\n",
         "!pip install pyrsgis"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "eA5AhCi0KFdG",
         "colab_type": "code",
-        "outputId": "bfabbb5c-fc46-4eb5-d408-7d8514a9e5f1",
+        "outputId": "9de933f7-9082-41bb-b747-00c2f6cd7472",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
@@ -104,18 +104,18 @@
         "#%cd /content/master_thesis_code\n",
         "#!git pull"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'master_thesis_code'...\n",
-            "remote: Enumerating objects: 8, done.\u001b[K\n",
-            "remote: Counting objects: 100% (8/8), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (8/8), done.\u001b[K\n",
-            "remote: Total 330 (delta 2), reused 0 (delta 0), pack-reused 322\u001b[K\n",
-            "Receiving objects: 100% (330/330), 1.12 MiB | 4.12 MiB/s, done.\n",
-            "Resolving deltas: 100% (167/167), done.\n"
+            "remote: Enumerating objects: 12, done.\u001b[K\n",
+            "remote: Counting objects: 100% (12/12), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (12/12), done.\u001b[K\n",
+            "remote: Total 334 (delta 4), reused 0 (delta 0), pack-reused 322\u001b[K\n",
+            "Receiving objects: 100% (334/334), 1.12 MiB | 23.94 MiB/s, done.\n",
+            "Resolving deltas: 100% (169/169), done.\n"
           ],
           "name": "stdout"
         }
@@ -140,7 +140,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "CwZd9v4Ukxt6",
-        "outputId": "c0e02ac5-be8a-4238-a7b5-6c7a96c8c9a9",
+        "outputId": "4fc3c307-7bfa-461d-e288-909ef4a0bab3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
@@ -163,7 +163,7 @@
         "import scipy.io\n",
         "import sklearn.model_selection"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -361,7 +361,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "1NURzseNL_yH",
-        "outputId": "a41cd788-11d1-48b3-aa71-a2a3392ff503",
+        "outputId": "ff2bed71-0e38-4942-e06c-f95a5355fe75",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
@@ -372,7 +372,7 @@
         "y_dat = pd.read_csv(\"/gdrive/My Drive/ThesisData/Data/enhanced_gdp_data.csv\")\n",
         "y_dat.head()"
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +480,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
@@ -489,7 +489,7 @@
       "metadata": {
         "id": "HYE5RQr87GXH",
         "colab_type": "code",
-        "outputId": "64a4ddae-495f-4a2e-e98d-6db163929bc0",
+        "outputId": "0125159b-a6f7-4ff5-f893-19983bf3f9ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -531,19 +531,19 @@
       "metadata": {
         "colab_type": "code",
         "id": "LHq0y4SCsQFp",
-        "outputId": "4fea63c8-c298-4b4a-df4b-baa46bca4eb2",
+        "outputId": "eafc976e-a49f-43a2-88c5-be84f0c066eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 638
+          "height": 1000
         }
       },
       "source": [
         "# PreProcess images with certain resolution\n",
         "res = 64\n",
         "x,y,label = sat_images.create_data(onlyfiles,mypath,y_dat,prediction='nuts_value',replace_nan='mean',resolution=res,night=False)\n",
-        "scipy.io.savemat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_64.mat\", mdict={'x': x}, oned_as='row')"
+        "#scipy.io.savemat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_64.mat\", mdict={'x': x}, oned_as='row')"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -582,7 +582,98 @@
             "Image processed:  310  of  1253\n",
             "Image processed:  320  of  1253\n",
             "Image processed:  330  of  1253\n",
-            "Image processed:  340  of  1253\n"
+            "Image processed:  340  of  1253\n",
+            "Image processed:  350  of  1253\n",
+            "Image processed:  360  of  1253\n",
+            "Image processed:  370  of  1253\n",
+            "Image processed:  380  of  1253\n",
+            "Image processed:  390  of  1253\n",
+            "Image processed:  400  of  1253\n",
+            "Image processed:  410  of  1253\n",
+            "Image processed:  420  of  1253\n",
+            "Image processed:  430  of  1253\n",
+            "Image processed:  440  of  1253\n",
+            "Image processed:  450  of  1253\n",
+            "Image processed:  460  of  1253\n",
+            "Image processed:  470  of  1253\n",
+            "Image processed:  480  of  1253\n",
+            "Image processed:  490  of  1253\n",
+            "Image processed:  500  of  1253\n",
+            "Image processed:  510  of  1253\n",
+            "Image processed:  520  of  1253\n",
+            "Image processed:  530  of  1253\n",
+            "Image processed:  540  of  1253\n",
+            "Image processed:  550  of  1253\n",
+            "Image processed:  560  of  1253\n",
+            "Image processed:  570  of  1253\n",
+            "Image processed:  580  of  1253\n",
+            "Image processed:  590  of  1253\n",
+            "Image processed:  600  of  1253\n",
+            "Image processed:  610  of  1253\n",
+            "Image processed:  620  of  1253\n",
+            "Image processed:  630  of  1253\n",
+            "Image processed:  640  of  1253\n",
+            "Image processed:  650  of  1253\n",
+            "Image processed:  660  of  1253\n",
+            "Image processed:  670  of  1253\n",
+            "Image processed:  680  of  1253\n",
+            "Image processed:  690  of  1253\n",
+            "Image processed:  700  of  1253\n",
+            "Image processed:  710  of  1253\n",
+            "Image processed:  720  of  1253\n",
+            "Image processed:  730  of  1253\n",
+            "Image processed:  740  of  1253\n",
+            "Image processed:  750  of  1253\n",
+            "Image processed:  760  of  1253\n",
+            "Image processed:  770  of  1253\n",
+            "Image processed:  780  of  1253\n",
+            "Image processed:  790  of  1253\n",
+            "Image processed:  800  of  1253\n",
+            "Image processed:  810  of  1253\n",
+            "Image processed:  820  of  1253\n",
+            "Image processed:  830  of  1253\n",
+            "Image processed:  840  of  1253\n",
+            "Image processed:  850  of  1253\n",
+            "Image processed:  860  of  1253\n",
+            "Image processed:  870  of  1253\n",
+            "Image processed:  880  of  1253\n",
+            "Image processed:  890  of  1253\n",
+            "Image processed:  900  of  1253\n",
+            "Image processed:  910  of  1253\n",
+            "Image processed:  920  of  1253\n",
+            "Image processed:  930  of  1253\n",
+            "Image processed:  940  of  1253\n",
+            "Image processed:  950  of  1253\n",
+            "Image processed:  960  of  1253\n",
+            "Image processed:  970  of  1253\n",
+            "Image processed:  980  of  1253\n",
+            "Image processed:  990  of  1253\n",
+            "Image processed:  1000  of  1253\n",
+            "Image processed:  1010  of  1253\n",
+            "Image processed:  1020  of  1253\n",
+            "Image processed:  1030  of  1253\n",
+            "Image processed:  1040  of  1253\n",
+            "Image processed:  1050  of  1253\n",
+            "Image processed:  1060  of  1253\n",
+            "Image processed:  1070  of  1253\n",
+            "Image processed:  1080  of  1253\n",
+            "Image processed:  1090  of  1253\n",
+            "Image processed:  1100  of  1253\n",
+            "Image processed:  1110  of  1253\n",
+            "Image processed:  1120  of  1253\n",
+            "Image processed:  1130  of  1253\n",
+            "Image processed:  1140  of  1253\n",
+            "Image processed:  1150  of  1253\n",
+            "Image processed:  1160  of  1253\n",
+            "Image processed:  1170  of  1253\n",
+            "Image processed:  1180  of  1253\n",
+            "Image processed:  1190  of  1253\n",
+            "Image processed:  1200  of  1253\n",
+            "Image processed:  1210  of  1253\n",
+            "Image processed:  1220  of  1253\n",
+            "Image processed:  1230  of  1253\n",
+            "Image processed:  1240  of  1253\n",
+            "Image processed:  1250  of  1253\n"
           ],
           "name": "stdout"
         }
@@ -911,7 +1002,7 @@
       "metadata": {
         "id": "8Y3Xdhdryg5R",
         "colab_type": "code",
-        "outputId": "f09a0667-bb28-43c4-81e5-97b41b5b4ef4",
+        "outputId": "93688a91-be0a-43d6-a975-4a0f319f64e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
@@ -942,7 +1033,7 @@
         "from os import listdir\n",
         "from os.path import isfile, join"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1076,7 +1167,7 @@
         "  x_day = scipy.io.loadmat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_64.mat\")['x']\n",
         "  y_dat = pd.read_csv(\"/gdrive/My Drive/ThesisData/Data/enhanced_gdp_data.csv\")\n",
         "\n",
-        "  mypath = \"/gdrive/My Drive/nuts_geotiff/\"\n",
+        "  mypath = \"/gdrive/My Drive/nuts_night/\"\n",
         "  onlyfiles = [f for f in listdir(mypath) if isfile(join(mypath, f))]\n",
         "\n",
         "  y, label = sat_images.create_y_label(onlyfiles,mypath,y_dat,prediction='nuts_value')\n",
@@ -1085,6 +1176,50 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KfGVznceheZn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "55852dca-46c3-4c48-90e7-6ae592d80b3c"
+      },
+      "source": [
+        "mypath_night = \"/gdrive/My Drive/nuts_night/\"\n",
+        "mypath_day = \"/gdrive/My Drive/nuts_geotiff/\"\n",
+        "onlyfiles_night = [f for f in listdir(mypath_night) if isfile(join(mypath_night, f))]\n",
+        "onlyfiles_day = [f for f in listdir(mypath_day) if isfile(join(mypath_day, f))]\n",
+        "\n",
+        "y_dat = pd.read_csv(\"/gdrive/My Drive/ThesisData/Data/enhanced_gdp_data.csv\")\n",
+        "\n",
+        "y_night, label_night = sat_images.create_y_label(onlyfiles_night,mypath_night,y_dat,prediction='nuts_value')\n",
+        "y_day, label_day = sat_images.create_y_label(onlyfiles_day,mypath_day,y_dat,prediction='nuts_value')\n",
+        "\n",
+        "x_day = scipy.io.loadmat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_64.mat\")['x']\n",
+        "x_night = scipy.io.loadmat(\"/gdrive/My Drive/ThesisData/Data/data_night_mean_64.mat\")['x']\n",
+        "\n",
+        "idx_diff = [i for i, item in enumerate(label_day) if item in label_night]\n",
+        "label = [label_day[i] for i in idx_diff]\n",
+        "y = [y_day[i] for i in idx_diff]\n",
+        "x_day = [x_day[i] for i in idx_diff]\n",
+        "print(label[:10])\n",
+        "print(label_night[:10])"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['CZ04_2012.tif', 'CZ04_2013.tif', 'ES24_2008.tif', 'ES24_2009.tif', 'ES24_2010.tif', 'ES24_2011.tif', 'ES24_2012.tif', 'ES24_2013.tif', 'BG31_2008.tif', 'BG31_2009.tif']\n",
+            "['AL02_2008.tif', 'AL02_2009.tif', 'AL02_2010.tif', 'AL02_2011.tif', 'AL02_2012.tif', 'AL02_2013.tif', 'CZ05_2008.tif', 'CZ05_2010.tif', 'CZ05_2009.tif', 'CZ05_2011.tif']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
